--- a/Server/package.json
+++ b/Server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "this is server socket",
   "main": "index.js",
-  "start": "node-sass sass/main.scss  css/style.css -w"
+  "start": "node-sass sass/main.scss  css/style.css -w",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
