--- a/Server/package.json
+++ b/Server/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile:sass": "node-sass sass/main.scss  css/style.css -w",
-     "start": "node-sass sass/main.scss  css/style.css -w",
+     "start": "node index.js",
   },
   "author": "jay",
   "license": "ISC",
