--- a/Server/package.json
+++ b/Server/package.json
@@ -4,12 +4,13 @@
   "description": "this is server socket",
   "main": "index.js",
   "scripts": {
-     "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "jay",
   "license": "ISC",
   "dependencies": {
     "nodemon": "^2.0.12",
     "socket.io": "^4.1.3"
-  }
+  },
+  "devDependencies": {}
 }
