--- a/Server/package.json
+++ b/Server/package.json
@@ -9,6 +9,7 @@
   "author": "jay",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
     "nodemon": "^2.0.12",
     "socket.io": "^4.1.3"
   },
